create github pages

--- a/page3.html
+++ b/page3.html
@@ -22,7 +22,7 @@
   
 </head>
 <body>
-<section class="menu cid-qs1TupRcIH" once="menu" id="menu1-e" data-rv-view="1834">
+<section class="menu cid-qs1TupRcIH" once="menu" id="menu1-e" data-rv-view="2006">
 
     
 
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/a">web site builder</a></section><section class="mbr-section form1 cid-qtmRrt9OZV" id="form1-n" data-rv-view="1836">
+<section class="engine"><a href="https://mobirise.co/a">web page builder</a></section><section class="mbr-section form1 cid-qtmRrt9OZV" id="form1-n" data-rv-view="2008">
 
     
 
@@ -81,7 +81,7 @@
                     Thanks for filling out the form!
                 </div>
 
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="6w49bsB8YAOsAu7K8iKk8UPuoCKxp6GUeoGnshicxLIfvBaoNKegkvzHQN4e5j3WF5NCMtogqIfx909v5o0SdNedOhEAUKsSL3x6iGEU4amTcffmnlZ9eF/473MYy1af">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="uHLSO78phbZLKvXdPFKxd4kGwHOwJU0+GnOxS4m0Z3vbFTQSEHaAWUHXJ4QnjikuyUBW8HI14w0+ommQeJeOINDA4dopEJVGKwB0eMjDAaygT0PcIqj1hxSgbVj5Qjbo">
                     <div class="row row-sm-offset">
                         <div class="col-md-4 multi-horizontal" data-for="name">
                             <div class="form-group">
