--- a/page3.html
+++ b/page3.html
@@ -22,7 +22,7 @@
   
 </head>
 <body>
-<section class="menu cid-qs1TupRcIH" once="menu" id="menu1-e" data-rv-view="2232">
+<section class="menu cid-qs1TupRcIH" once="menu" id="menu1-e" data-rv-view="179">
 
     
 
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/n">bootstrap modal popup</a></section><section class="mbr-section form1 cid-qtmRrt9OZV" id="form1-n" data-rv-view="2234">
+<section class="engine"><a href="https://mobirise.co/q">bootstrap slider</a></section><section class="mbr-section form1 cid-qtmRrt9OZV" id="form1-n" data-rv-view="181">
 
     
 
@@ -81,7 +81,7 @@
                     Thanks for filling out the form!
                 </div>
 
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="1/NDrD86vUwovnBRcJPKiYWpqGiKiTAHTv6SDMK7O4C2b8nQTcBGlJ+N5irlZjUwjKWA0Nf//Rx/pPHepMzTIuNgpZg+VDAnPlDuzMTdGbBsHjxdyFn2Iy+zYVEb3Hjk">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="yEntaVugxaXy6R329v6k6Wnp0FnI50Dmb+kp3t1S6DkLBlceatmZhwqrKEW+3c997UqHwWwyLJUiiVN4XMjTKXZgCOpfXhFGT6ln+XsPybwMAaxOOY1jkLU1NP7AKhbs">
                     <div class="row row-sm-offset">
                         <div class="col-md-4 multi-horizontal" data-for="name">
                             <div class="form-group">
