--- a/page5.html
+++ b/page5.html
@@ -52,19 +52,19 @@
                     <a class="nav-link link text-primary dropdown-toggle display-4" href="page2.html" data-toggle="dropdown-submenu" aria-expanded="true">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
                         Services
-                    </a><div class="dropdown-menu"><a class="text-primary dropdown-item display-4" href="page10.html">Overview</a><a class="text-primary dropdown-item display-4" href="socialmediam.html" aria-expanded="false">Are YOU Social?</a><a class="text-primary dropdown-item display-4" href="page8.html" aria-expanded="false">Social Media&nbsp;</a><a class="text-primary dropdown-item display-4" href="packages.html" aria-expanded="true">Pricing<br></a></div>
+                    </a><div class="dropdown-menu"><a class="text-primary dropdown-item display-4" href="page10.html">Overview</a><a class="text-primary dropdown-item display-4" href="overviewanimate.html">Animations</a><a class="text-primary dropdown-item display-4" href="socialmediam.html" aria-expanded="false">Are YOU Social?</a><a class="text-primary dropdown-item display-4" href="page8.html" aria-expanded="false">Manage Social Media</a><a class="text-primary dropdown-item display-4" href="packages.html" aria-expanded="true">Pricing<br></a></div>
                 </li>
-                <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-primary display-4" href="page1.html" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-touch mbr-iconfont mbr-iconfont-btn" style="color: rgb(167, 214, 230);"></span>
+                <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-primary display-4" href="aboutus.html" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-touch mbr-iconfont mbr-iconfont-btn" style="color: rgb(167, 214, 230);"></span>
                         
                         About Us
-                    </a><div class="dropdown-menu"><a class="dropdown-item text-primary display-4" href="page4.html">Who Am I?</a><a class="dropdown-item text-primary display-4" href="page5.html" aria-expanded="false">Portfolio</a><a class="dropdown-item text-primary display-4" href="page1.html" aria-expanded="false">The Process</a></div></li></ul>
+                    </a><div class="dropdown-menu"><a class="dropdown-item text-primary display-4" href="page4.html">Who Am I?</a><a class="dropdown-item text-primary display-4" href="planning.html">Planning</a><a class="dropdown-item text-primary display-4" href="page5.html" aria-expanded="false">Portfolio</a><a class="dropdown-item text-primary display-4" href="page1.html" aria-expanded="false">The Process</a></div></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="index.html#form1-5"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn"></span>
                     </a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/a">free site builder</a></section><section class="mbr-gallery mbr-slider-carousel cid-qtm1z90bVV" id="gallery1-m" data-rv-view="102">
+<section class="engine"><a href="https://mobirise.co/k">free bootstrap templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-qtm1z90bVV" id="gallery1-m" data-rv-view="102">
 
     
 
