create github pages

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section class="menu cid-qs1TupRcIH" once="menu" id="menu1-e" data-rv-view="892">
+<section class="menu cid-qs1TupRcIH" once="menu" id="menu1-e" data-rv-view="1090">
 
     
 
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/g">create your own website</a></section><section class="mbr-section form1 cid-qtmRrt9OZV" id="form1-n" data-rv-view="894">
+<section class="engine"><a href="https://mobirise.co/h">how to make a website</a></section><section class="mbr-section form1 cid-qtmRrt9OZV" id="form1-n" data-rv-view="1092">
 
     
 
@@ -82,7 +82,7 @@
                     Thanks for filling out the form!
                 </div>
 
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="Kf86CBAFJahH32n1IfpyCTDqdbrthglg0n2TK2NXGRzZiddXqMv6Pi7g0TLAEmFC8PVEw5EIAaJ7e8I5LF5ex0K/2iKNF1Ev1nwyGg6yWHyy5dJew1P7IRS0/nlOLcre">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="7VKlofMlpDz27syjqueQkpW92sj9DEEYBjuj7xYV6TRILesDvKAtwG9EJi9Kt1TJZa2GggBqsimwC8oiZ59SlFGNL9tB0NJ7VgmxBdwvRvyQJ/RDlOk9UPnU2jn1ufWw">
                     <div class="row row-sm-offset">
                         <div class="col-md-4 multi-horizontal" data-for="name">
                             <div class="form-group">
