create github pages

--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
 <!-- /Google Analytics -->
 
 
-<section class="menu cid-qs1TupRcIH" once="menu" id="menu1-e" data-rv-view="657">
+<section class="menu cid-qs1TupRcIH" once="menu" id="menu1-e" data-rv-view="128">
 
     
 
@@ -78,7 +78,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/p">bootstrap dropdown</a></section><section class="mbr-section form1 cid-qtmRrt9OZV" id="form1-n" data-rv-view="659">
+<section class="engine"><a href="https://mobirise.co/n">bootstrap modal popup</a></section><section class="mbr-section form1 cid-qtmRrt9OZV" id="form1-n" data-rv-view="130">
 
     
 
@@ -97,7 +97,7 @@
                     Thanks for filling out the form!
                 </div>
 
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="HL7avKo0dETkMatD9O+Gg+9VRo1BFN+P+o7FhBY0Xa+V7YyQUUOyjLolmiyvlgUqVaHieT+HySJz7j2hzu+rwloNdEZ72whofAr/CSVvFnC7N/hEccDSGPoAbn57msz/">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="koNp19JDGbYwMrK0OdZ0ne+SrESzj6rDg5I2oOiFQW6Rl+L5Jx9TqMEXMRalYLz+so4Ogi+lKoQjcdcjhGD3bxa/idTov0bzwNmQxwwYpNit7ikmiL526eNr4i5OMTKr">
                     <div class="row row-sm-offset">
                         <div class="col-md-4 multi-horizontal" data-for="name">
                             <div class="form-group">
