--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
 <!-- /Google Analytics -->
 
 
-<section class="menu cid-qs1TupRcIH" once="menu" id="menu1-e" data-rv-view="128">
+<section class="menu cid-qs1TupRcIH" once="menu" id="menu1-e" data-rv-view="371">
 
     
 
@@ -78,7 +78,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/p">bootstrap menu</a></section><section class="mbr-section form1 cid-qtmRrt9OZV" id="form1-n" data-rv-view="130">
+<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section form1 cid-qtmRrt9OZV" id="form1-n" data-rv-view="373">
 
     
 
@@ -97,7 +97,7 @@
                     Thanks for filling out the form!
                 </div>
 
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="mW6XrYTcDefwnGtgR6VLZk6AwL9g/nerjTpYasgeb5E3pOKc/o1xgq9cX2aUDhdNl2SaifGCUuwNxAoE7KmjBwGT6923kANjXPoYesqTTmDVtOTKXua7TNbtmvZzaove">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="yqRs04Y1kexBYwJTy4z9i6pCtyaOE/QVbwRh4VdhjMfTkB21lADvXY78FkW/aM0/1NdHC05mfVGZe/foEDagmiKGMqnb3V16oEJn01uCmLQ8EHjZ955CU5j630cdSE/Q">
                     <div class="row row-sm-offset">
                         <div class="col-md-4 multi-horizontal" data-for="name">
                             <div class="form-group">
