create github pages

--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
 <!-- /Google Analytics -->
 
 
-<section class="menu cid-qs1TupRcIH" once="menu" id="menu1-e" data-rv-view="1167">
+<section class="menu cid-qs1TupRcIH" once="menu" id="menu1-e" data-rv-view="1413">
 
     
 
@@ -78,7 +78,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/j">how to design a website</a></section><section class="mbr-section form1 cid-qtmRrt9OZV" id="form1-n" data-rv-view="1169">
+<section class="engine"><a href="https://mobirise.co/j">how to design your own website for free</a></section><section class="mbr-section form1 cid-qtmRrt9OZV" id="form1-n" data-rv-view="1415">
 
     
 
@@ -97,7 +97,7 @@
                     Thanks for filling out the form!
                 </div>
 
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="fGxNemlHjK8SW7POBUvtzf26a5LsZ4Kc33SJlttAx1D7pylhUJFJMlM8jA5yncvHKDf6YmGKXQ6YVHohjl+DNntVim7rPNc3sCLgMABb4JcefVps6i3vgHlT8HqgxcIf">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="2tbqhfDnwpLR5SPMviimd/C0lXqolcO8PsVj6f5VklG4Zt0YK7DlSAQ3N8PHF/DdL/qN1YlehIJZ7Us+EyL9jnwULhHOHO1jcOVXotTA4ABP6w2SAIYD56u+m5z7O9IX">
                     <div class="row row-sm-offset">
                         <div class="col-md-4 multi-horizontal" data-for="name">
                             <div class="form-group">
