--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@ s.parentNode.insertBefore(b, s);})();
                     </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="company.html#header7-10">About</a><a class="text-white dropdown-item display-4" href="ourstory.html#header11-15">Our Story</a><a class="text-white dropdown-item display-4" href="index.html#gallery2-6">Products</a><a class="text-white dropdown-item display-4" href="portfolio.html#header2-26">Portfolio</a><a class="text-white dropdown-item display-4" href="index.html#testimonials4-7">Testimonials</a><a class="text-white dropdown-item display-4" href="index.html#pricing-tables1-l">Pricing</a></div>
                 </li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="#top" aria-expanded="false" data-toggle="dropdown-submenu"><span class="fa fa-feed mbr-iconfont mbr-iconfont-btn"></span>
                         &nbsp;Blog &nbsp;</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="blogarticles.html#content5-1s" aria-expanded="false">Articles</a><a class="text-white dropdown-item display-4" href="blog.html#content5-1d" aria-expanded="false">Blog</a></div></li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="index.html#RSRCULPROContactForm-2b"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn"></span>Contact Us!
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="index.html#RSRCULPROContactForm-2a"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn"></span>Contact Us!
                 </a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/f">easy web creator</a></section><section class="header7 cid-qvSK4HTIRN mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=NbYWF75rsmg" id="header7-3">
+<section class="engine"><a href="https://mobirise.ws/b">best site creator</a></section><section class="header7 cid-qvSK4HTIRN mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=NbYWF75rsmg" id="header7-3">
 
     
 
@@ -288,9 +288,9 @@ s.parentNode.insertBefore(b, s);})();
         <div class="media-container-row">
             <div class="mbr-text counter-container col-12 col-md-8 mbr-fonts-style display-7">
                 <ol>
-                    <li><strong>MOBILE FRIENDLY</strong> - All products are designed focused on the smartphone customer. <a href="index.html#form4-a" class="text-primary">&nbsp;Buy &nbsp;now!</a></li>
-                    <li><strong>ONLINE PRESENCE</strong> - All Social media designed in conjunction with the website then we publish on our channels for <strong><em>FREE</em></strong>. &nbsp;<a href="index.html#form4-a" class="text-primary">Buy now!</a></li>
-                    <li><strong>CREATIVE DESIGN</strong>&nbsp;- Limited availability media used in the creative designs. &nbsp;<a href="index.html#form4-a" class="text-primary">Buy now!</a></li><li><strong>Value Added Services</strong>. &nbsp;Online prescence comes with ALL services. We publish your web site and social media video on YouTube, Google+, LinkedIn and Instagram. <strong><em><a href="index.html#form4-a" class="text-primary">FREE !!! &nbsp;Buy NOW!!</a></em></strong></li>
+                    <li><strong>MOBILE FRIENDLY</strong> - All products are designed focused on the smartphone customer. <a href="index.html#RSRCULPROContactForm-2a" class="text-primary">&nbsp;Buy &nbsp;now!</a></li>
+                    <li><strong>ONLINE PRESENCE</strong> - All Social media designed in conjunction with the website then we publish on our channels for <strong><em>FREE</em></strong>. &nbsp;<a href="index.html#RSRCULPROContactForm-2a" class="text-primary">Buy now!</a></li>
+                    <li><strong>CREATIVE DESIGN</strong>&nbsp;- Limited availability media used in the creative designs. &nbsp;<a href="index.html#RSRCULPROContactForm-2a" class="text-primary">Buy now!</a></li><li><strong>Value Added Services</strong>. &nbsp;Online prescence comes with ALL services. We publish your web site and social media video on YouTube, Google+, LinkedIn and Instagram. <strong><em><a href="index.html#RSRCULPROContactForm-2a" class="text-primary">FREE !!! &nbsp;Buy NOW!!</a></em></strong></li>
                 </ol>
             </div>
         </div>
@@ -481,7 +481,7 @@ s.parentNode.insertBefore(b, s);})();
                             <li class="list-group-item">25mB Max. Filesize</li>
                         </ul>
                     </div>
-                    <div class="mbr-section-btn text-center py-4 pb-5"><a href="index.html#form4-a" class="btn btn-primary display-4">BUY NOW</a></div>
+                    <div class="mbr-section-btn text-center py-4 pb-5"><a href="index.html#RSRCULPROContactForm-2a" class="btn btn-primary display-4">BUY NOW</a></div>
                 </div>
             </div>
 
@@ -503,7 +503,7 @@ s.parentNode.insertBefore(b, s);})();
                             <li class="list-group-item">20-90 Seconds Max. &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</li>
                         </ul>
                     </div>
-                    <div class="mbr-section-btn text-center py-4 pb-5"><a href="index.html#form4-a" class="btn btn-primary display-4">BUY NOW</a></div>
+                    <div class="mbr-section-btn text-center py-4 pb-5"><a href="index.html#RSRCULPROContactForm-2a" class="btn btn-primary display-4">BUY NOW</a></div>
                 </div>
             </div>
 
@@ -525,7 +525,7 @@ s.parentNode.insertBefore(b, s);})();
                             <li class="list-group-item">Unlimited Usage</li>
                         </ul>
                     </div>
-                    <div class="mbr-section-btn text-center py-4 pb-5"><a href="index.html#form4-a" class="btn btn-primary display-4">BUY NOW</a></div>
+                    <div class="mbr-section-btn text-center py-4 pb-5"><a href="index.html#RSRCULPROContactForm-2a" class="btn btn-primary display-4">BUY NOW</a></div>
                 </div>
             </div>
 
@@ -549,7 +549,7 @@ s.parentNode.insertBefore(b, s);})();
                             <li class="list-group-item">Domain Name Registration and web hosting extra.</li>
                         </ul>
                     </div>
-                    <div class="mbr-section-btn text-center py-4 pb-5"><a href="index.html#form4-a" class="btn btn-primary display-4">BUY NOW</a></div>
+                    <div class="mbr-section-btn text-center py-4 pb-5"><a href="index.html#RSRCULPROContactForm-2a" class="btn btn-primary display-4">BUY NOW</a></div>
                 </div>
             </div>
         </div>
