create github pages

--- a/blog.html
+++ b/blog.html
@@ -112,7 +112,7 @@ s.parentNode.insertBefore(b, s);})();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/b">best website creator</a></section><section class="mbr-section content5 cid-qDhb8wlDgZ mbr-parallax-background" id="content5-1d">
+<section class="engine"><a href="https://mobirise.ws">Mobirise</a></section><section class="mbr-section content5 cid-qDhb8wlDgZ mbr-parallax-background" id="content5-1d">
 
     
 
@@ -131,9 +131,11 @@ s.parentNode.insertBefore(b, s);})();
     </div>
 </section>
 
-<section class="mbr-social-feed" data-posts="4" id="feed-1e" data-facebook="SerioDesign" data-twitter="" data-google="+CharlesKDavis" data-youtube="UCrkwLLp3vRrF_HrQ_YlY6_Q" data-rv-view="278" style="background-color: rgb(135, 154, 159); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-social-feed loading" id="feed-1e" data-facebook="SerioDesign" data-twitter="" data-google="+CharlesKDavis" data-posts="4" data-youtube="UCrkwLLp3vRrF_HrQ_YlY6_Q" data-rv-view="278" style="background-color: rgb(135, 154, 159); padding-top: 0px; padding-bottom: 0px;">
     
-    <div class="social-feed-container"></div>
+    <img class="social-feed-container-loading" alt="">
+    <div class="social-feed-container">
+    </div>
 </section>
 
 <section once="" class="cid-qw1Q7680qB" id="footer7-1c">
