--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ s.parentNode.insertBefore(b, s);})();
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                         <img src="assets/images/seriodesignfxlogo400x400-400x400.jpg" alt="Mobirise" title="" style="height: 3.8rem;">
+                         <img src="assets/images/seriodesignfxlogo400x400-400x400.jpg" alt="SERIO Design FX " title="SERIO Design FX" style="height: 3.8rem;">
                     </a>
                 </span>
                 
@@ -125,7 +125,7 @@ s.parentNode.insertBefore(b, s);})();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws">Mobirise</a></section><section class="header7 cid-qvSK4HTIRN mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=NbYWF75rsmg" id="header7-3">
+<section class="engine"><a href="https://mobirise.ws/i">build free website</a></section><section class="header7 cid-qvSK4HTIRN mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=NbYWF75rsmg" id="header7-3">
 
     
 
@@ -224,7 +224,7 @@ s.parentNode.insertBefore(b, s);})();
             <div class="media-content align-right">
                 <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">A Fresh Look</h1>
                 <div class="mbr-section-text mbr-white pb-3">
-                    <p class="mbr-text mbr-fonts-style display-5"><em>Services for <br>people wanting<br>an online presence<br>at a reasonable<br>price.</em></p>
+                    <p class="mbr-text mbr-fonts-style display-5"><em>The landing is EVERYTHING.</em><br><em>If you get that wrong all</em><br><em>the marketing will be for</em><br><em>NOTHING!!!</em></p>
                 </div>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="tel:+1-414-301-3159"><span class="socicon socicon-viber mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>Let's Get Started!</a>
                         <a class="btn btn-md btn-white-outline display-4" href="index.html#gallery2-6"><span class="mbri-video mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>PORTFOLIO</a></div>
@@ -418,7 +418,7 @@ s.parentNode.insertBefore(b, s);})();
         <div class="user row">
           <div class="col-lg-3 col-md-4">
             <div class="user_image">
-              <a href="https://www.facebook.com/mytravelagent08/" target="_blank"><img src="assets/images/emilyphoto-145x145.jpg" alt="" title=""></a>
+              <a href="https://www.facebook.com/mytravelagent08/"><img src="assets/images/emilyphoto-145x145.jpg" alt="Emily Davis" title="My Travel Agent08"></a>
             </div>
           </div>
           <div class="testimonials-caption col-lg-9 col-md-8">
@@ -434,7 +434,7 @@ s.parentNode.insertBefore(b, s);})();
         <div class="user row">
           <div class="col-lg-3 col-md-4">
             <div class="user_image">
-              <a href="http://metrosecurityserviceswi.com/" target="_blank"><img src="assets/images/logolarge-507x538.jpg" alt="" title=""></a>
+              <a href="http://metrosecurityserviceswi.com/"><img src="assets/images/logolarge-507x538.jpg" alt="Metro Secuirty Services Wisconsin" title="Metro Secuirty Services Wisconsin"></a>
             </div>
           </div>
           <div class="testimonials-caption col-lg-9 col-md-8">
@@ -450,7 +450,7 @@ s.parentNode.insertBefore(b, s);})();
         <div class="user row">
           <div class="col-lg-3 col-md-4">
             <div class="user_image">
-              <a href="https://www.facebook.com/allstarkutter/"><img src="assets/images/alstarbldgnew-960x960.jpg" alt="" title=""></a>
+              <a href="https://www.facebook.com/allstarkutter/"><img src="assets/images/alstarbldgnew-960x960.jpg" alt="All Star Kutz Milwaukee" title="All Star Kutz Milwaukee"></a>
             </div>
           </div>
           <div class="testimonials-caption col-lg-9 col-md-8">
@@ -567,7 +567,7 @@ s.parentNode.insertBefore(b, s);})();
     </div>
 </section>
 
-<div id="custom-html-2c" custom-code="true" data-rv-view="79"><!-- Contact Form by Steve Riches - RichoSoft Squared - (C) 2016 - All Rights Reserved -->
+<div id="custom-html-2c" custom-code="true" data-rv-view="73"><!-- Contact Form by Steve Riches - RichoSoft Squared - (C) 2016 - All Rights Reserved -->
 <!-- December 2016 - www.richosoft2.co.uk -->
 <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
     <section>
