create github pages

--- a/company.html
+++ b/company.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/ckdlogoanimatedgif.gif" type="image/x-icon">
   <meta name="description" content="The mission is to be a leader in providing  trusted excellence in a media conscience world.  The challenges of the social network can be met with a company that understands the impact of social media. The ability to interconnect online presence and web design. We provide the foundation and continued services for online presence.">
-  <title>SERIO Design FX  Company Mission and Vision</title>
+  <title>SERIO Design FX  Company Mission and Strategic Vision</title>
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
@@ -22,7 +22,10 @@
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
-  <meta name="description" content="Video content leader providing trusted excellence. Our mission is to provide a service for business who needs solutions."/>
+  <title>SERIO Design FX  Company Mission and Strategic Vision</title>
+<meta name="Description" content="The mission is to be a leader in providing trusted excellence in a media conscience world.  The challenges of the social network can be met with a company that understands the impact of social media. The ability to interconnect online presence and web design. We provide the foundation and continued services for online presence.">
+<meta name="Keywords" content="web design,social media video,strategy,mission statement,milwaukee,immersive design">
+
 
 </head>
 <body>
@@ -110,7 +113,7 @@ s.parentNode.insertBefore(b, s);})();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/q">web page creator download</a></section><section class="header7 cid-qCOP6PjyBA" data-bg-video="http://www.youtube.com/watch?v=uNCr7NdOJgw" id="header7-10">
+<section class="engine"><a href="https://mobirise.ws/o">mobile website builder</a></section><section class="header7 cid-qCOP6PjyBA" data-bg-video="http://www.youtube.com/watch?v=uNCr7NdOJgw" id="header7-10">
 
     
 
@@ -128,7 +131,7 @@ s.parentNode.insertBefore(b, s);})();
                 
             </div>
 
-            <div class="mbr-figure" style="width: 145%;"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/O17lKFrHn2E?rel=0&amp;amp;showinfo=0&amp;autoplay=1&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+            <div class="mbr-figure" style="width: 145%;"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/O17lKFrHn2E?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
 
         </div>
     </div>
